整理个人中心逻辑

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">videoplayer</string>
+    <string name="app_name">视频播放器</string>
     <string name="app_info">视频播放器</string>
 </resources>
